# konzertmeister-cli

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.claude/: CLAUDE.md  settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  update-homebrew.yml
docs/: openapi.json  requirements.md  vision.md
docs/use_cases/: UC-001-configure-association-profile.md  UC-002-list-appointments.md  UC-003-create-appointment.md  traceability.md  use_cases.md  use_cases.puml
src/: api.rs  cli.rs  config.rs  main.rs  model.rs  output.rs
